# pygptcourse

./: .env.example  .eslintignore  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: cd.yml  ci.yml  github-actions-lint.yml
acceptance_test/: acceptance_test.py
docs/: OKRsForTheCodingChapterNeedsReview.csv  OKRsForTheCodingChapterNeedsReview.md  OKRsForTheCodingChapterWithAllMilestones.csv  notes-OKR.txt  tasks.md
docs/OKRs/: OKRsForTheCodingChapterWithAllMilestones.csv
docs/autogpt/: ai_settings.yaml  best_practices_dependencies.txt  best_practices_git.txt  chapter1.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md  chapter15.md  chapter16.md  chapter19.md  chapter20_content.md  chapter20_exercises.md  chapter20_improved_code.py  chapter20_improved_content.txt  chapter4.md  chapter7.md
docs/design/: t-shirt-launcher-design-doc.md
docs/github-issue-updater/: Dockerfile  github_issue_creater.py  github_issue_updater.py  github_requirements_updated_specific_req2.csv
docs/implementation/: t-shirt-launcher-implementation-doc.md
docs/notes_and_utils/: notes-OKR.txt
docs/notes_and_utils/autogpt/: best_practices_dependencies.txt  best_practices_deps.txt  best_practices_git.txt  chapter1.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  chapter16.md  chapter17.md  chapter18.md  chapter19.md  chapter2.md  chapter20_content.md  chapter20_exercises.md  chapter20_improved_code.py  chapter20_improved_content.txt  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md  chapter8.md  chapter9.md  chapter_2.txt  chapter_2_orig.txt
docs/notes_and_utils/github-issue-updater/: Dockerfile
docs/requirements/: github_requirements_orig.csv
src/pygptcourse/: camera_control.py  camera_manager.py  credentials.py  face_detector.py  file_system_image_loader.py  main.py  missile.py  otel_decorators.py  tracker.py  tshirt_launcher.py
tests/: test_integration_camera.py  test_main.py  test_system_application.py  test_unit_face_detector.py  test_unit_otel.py
