[tool.poetry]
name = "pygptcourse"
version = "0.1.2"
description = "Face detection and tracking using USB missile launcher and rpi camera module to demonstrate how ChatGPT can speed up development and writing clean and SOLID code."
authors = ["G Shiva"]
license = "Apache"
readme = "README.md"
packages = [{include = "pygptcourse", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "4.5.5.62"
opencv-contrib-python = "4.5.5.62"
face-recognition = "1.3.0"
pyusb = "^1.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.2"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "piwheels.org"
url = "https://www.piwheels.org/simple"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

